# SchoolHelperBot

./: .gitignore  README.md  docker-compose.yaml  filters.py  keyboards.py  main.py  misc.py  states.py  user_models.py  user_states.py
config/: config.py
db/core/: engine.py
db/func/: __init__.py  base.py  event.py
db/models/: __init__.py  events.py  organizators.py  types.py  user.py  user_to_event.py
filters/: __init__.py  _cmd_or_msg.py
handlers/: __init__.py  add_confs_handlers.py  adding_event.py  data_handlers.py  events_handlers.py  events_list.py  handlers.py  reports.py  user_data_change_handlers.py
keyboards/: __init__.py  event_keyboards.py  keyboards.py  user_keyboards.py  utils.py
middlewares/: admin_middleware.py
models/: conf_models.py  event_models.py  user_models.py
schemas/: event.py  user.py  utils.py
src/: Dockerfile  messages.py  pyproject.toml  states.py
src/config/: config.py
src/db/: __init__.py
src/db/core/: engine.py
src/db/func/: event.py  user.py
src/filters/: _registered.py
src/handlers/: base.py  registering.py  reports.py
src/keyboards/: base.py  buttons.py  event_adding.py
