[project]
name = "projectschoolbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.17.0",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "asttokens==3.0.0",
    "asyncpg==0.30.0",
    "attrs==24.3.0",
    "certifi==2024.12.14",
    "colorama==0.4.6",
    "decorator==5.1.1",
    "environs==14.1.0",
    "et-xmlfile==2.0.0",
    "executing==2.1.0",
    "frozenlist==1.5.0",
    "greenlet==3.1.1",
    "idna==3.10",
    "ipython==8.31.0",
    "jedi==0.19.2",
    "loguru==0.7.3",
    "magic-filter==1.0.12",
    "marshmallow==3.25.1",
    "matplotlib-inline==0.1.7",
    "multidict==6.1.0",
    "numpy==2.2.1",
    "openpyxl==3.1.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "prompt-toolkit==3.0.48",
    "propcache==0.2.1",
    "pure-eval==0.2.3",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.7.1",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "six==1.17.0",
    "sqlalchemy==2.0.37",
    "stack-data==0.6.3",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "wcwidth==0.2.13",
    "win32-setctime==1.2.0",
    "xlsxwriter==3.2.0",
    "yarl==1.18.3",
]
